2007-01-03  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_EventView.py: lint fixes
	* src/DataViews/_PersonView.py: lint fixes
	* src/RelLib/_Person.py: lint fixes
	* src/RelLib/_PrimaryObject.py: lint fixes
	* src/Selectors/_BaseSelector.py: lint fixes
	* src/GrampsWidgets.py: lint fixes
	* src/Spell.py: lint fixes
	* src/PageView.py: lint fixes
	* src/Filters/_SearchFilter.py: lint fixes
	* src/Filters/SideBar/_MediaSidebarFilter.py: lint fixes
	* src/Filters/SideBar/_SourceSidebarFilter.py: lint fixes
	* src/Filters/SideBar/_EventSidebarFilter.py: lint fixes
	* src/Filters/SideBar/_FamilySidebarFilter.py: lint fixes
	* src/Filters/SideBar/_PlaceSidebarFilter.py: lint fixes
	* src/Filters/SideBar/_RepoSidebarFilter.py: lint fixes
	* src/Filters/SideBar/_PersonSidebarFilter.py: lint fixes

2007-01-02  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: handle illegal confidence
	* src/RelLib/_Person.py: set_parent_family_list
	* src/Editors/_EditPerson.py: catch family changes

2007-01-02  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayTabs/_PersonBackRefList.py: new file
	* src/DisplayTabs/__init__.py: add PersonBackRefList
	* src/DisplayTabs/Makefile.am: ship new file
	* src/Editors/_EditPerson.py: show PersonBackRefList

2006-12-31  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: add HELP button support
	* src/ReportBase/_BareReportDialog.py: add HELP button support
	* src/plugins/NarrativeWeb.py: add HELP button support

2006-12-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Map to existing places if possible
	* src/Merge/_MergePerson.py: Merge identical names
	* src/ViewManager.py: bind <Alt>N and <Alt>P to next and previous view

2006-12-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py: removed change_page(): Do not set
	the toolbar buttons to a possibly wrong state, these are set by
	_change_person properly.
